// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items - 2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "XBox One",
      "price": 399,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Nintendo Switch",
  },
]
`;

exports[`can add new items 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Nintendo Switch",
      "price": 399,
    },
  ],
}
`;

exports[`can add new items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "XBox One",
        "price": 399,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Nintendo Switch",
        "price": 399,
      },
    ],
  },
]
`;
